--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Buscador Noticias React</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noticia+Text:700,900" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
